[gd_scene load_steps=10 format=2]

[ext_resource path="res://SceneWrapper.tscn" type="PackedScene" id=1]
[ext_resource path="res://StartScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Dungeon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://Dungeon.gd" type="Script" id=5]
[ext_resource path="res://EndingScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://Introduction.tscn" type="PackedScene" id=8]
[ext_resource path="res://SleepyDust.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=10]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="StartScreen" parent="." instance=ExtResource( 2 )]

[node name="Introduction" parent="." groups=[
"start",
] instance=ExtResource( 8 )]

[node name="Dungeon" parent="." groups=[
"dungeon",
] instance=ExtResource( 3 )]
script = ExtResource( 5 )

[node name="EndingScreen" parent="." instance=ExtResource( 7 )]

[node name="SceneWrapper" parent="." instance=ExtResource( 1 )]

[node name="UI" parent="." instance=ExtResource( 10 )]

[node name="SleepyDust" parent="." instance=ExtResource( 9 )]

[connection signal="game_started" from="StartScreen" to="." method="_on_StartScreen_game_started"]
[connection signal="game_started" from="StartScreen" to="Introduction" method="_on_StartScreen_game_started"]
[connection signal="intro_completed" from="Introduction" to="." method="_on_Introduction_intro_completed"]
[connection signal="completed_level" from="Dungeon" to="." method="_on_Dungeon_completed_level"]
[connection signal="completed_level" from="Dungeon" to="EndingScreen" method="_on_Dungeon_completed_level"]
[connection signal="ending_completed" from="EndingScreen" to="." method="_on_EndingScreen_ending_completed"]
